maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:33: error: not found: value pickUpBaggle
  pickUpBaggle()
  ^